@@ -37,9 +37,9 @@ def register():
         Sequence,
         SequenceStrict,
         UIMenu,
+        UIMenuFavorite,
         View,
         ShowViewStart,
-        ViewShortcut,
         ViewTreeWidth,
         ViewTreeExpandedState,
         ViewSearch,
@@ -86,7 +86,6 @@ def register():
         TranslationClean,
         TranslationUpdate,
         TranslationExport,
-        OpenShortcut,
         ShowView,
         PrintModelGraph,
         ModuleConfigWizard,
