@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Shortcut">
-    <field name="name"/>
-    <field name="user_id"/>
+<form string="Menu Favorite">
+    <label name="menu"/>
+    <field name="menu"/>
+    <label name="sequence"/>
     <field name="sequence"/>
-</tree>
+    <label name="user"/>
+    <field name="user"/>
+</form>
